Barra de navegacion
-Rediseño de la barra con css (estilo de fuente)
-Logo
-Logo usuario

--- a/Presentacion/index.html
+++ b/Presentacion/index.html
@@ -10,19 +10,51 @@
 </head>
 <body>
     <header class="site-header contenedor">
-        <img src="img/logo.png" alt="logotipo">
-    </header>
     
     <div class="barra">
         <nav class="navegacion-principal contenedor">
-            <a href="#">Hospital</a>
-            <a href="#">Guía del paciente</a>
-            <a href="#">Guía del doctor</a>
-            <a href="#">Citas</a>
-            <a href="#">Visualizar</a>
-            <a href="#">Contactos</a>
+            <ul class="menu"> 
+                <img class="logo" src="/Presentacion/img/logo.png" alt="">
+                <li><a href="">Hospital</a>
+                    <ul class="submenu">
+                        <li><a href="">Historia</a></li>
+                        <li><a href="">Misión</a></li>
+                        <li><a href="">Visión</a></li>
+                    </ul>
+                </li>
+                <li><a href="">Guía del paciente</a>
+                    <ul class="submenu">
+                        <li><a href="">Registrar</a></li>
+                        <li><a href="">Buscar</a></li>
+                    </ul>
+                </li>
+                <li><a href="">Guía del medico</a>
+                    <ul class="submenu">
+                        <li><a href="">Registrar</a></li>
+                        <li><a href="">Buscar</a></li>
+                    </ul>
+                </li>
+                <li><a href="">Citas</a>
+                    <ul class="submenu">
+                        <li><a href="">Registrar cita</a></li>
+                        <li><a href="">cancelar cita</a></li>
+                    </ul>
+                </li>
+                <li><a href="">Visualizar</a>
+                    <ul class="submenu">
+                        <li><a href="">Examenes</a></li>
+                        <li><a href="">Recetas</a></li>
+                        <li><a href="">Citas</a></li>
+                        <li><a href="">Pacientes</a></li>
+                        <li><a href="">Medicos</a></li>
+                    </ul>
+                </li>
+                <li><a href="">Contactos</a></li>
+                <img class="user" src="/Presentacion/img/profile-user.png" alt="">
+            </ul>
         </nav>
     </div>
+</header>
     
     <footer class="site-footer">
         <p class="copyrigth">Todos los derechos Reservados &copy;</p>
