--- a/vistas/login.html
+++ b/vistas/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ADVentas | www.incanatoit.com</title>
+    <title>Hospital Nuestra Familia</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="../public/css/AdminLTE.min.css">
     <!-- iCheck -->
     <link rel="stylesheet" href="../public/css/blue.css">
+    <link rel="stylesheet" href="../public/css/centrar.css">
+    
+    <link rel="shortcut icon" href="../files/img/LOGO.png">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,20 +26,25 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body class="hold-transition login-page">
+  <body class="hold-transition login-page fondo">
     <div class="login-box">
       <div class="login-logo">
-        <a href="../../index2.html"><b>HOSPITAL NUESTRA FAMILIA</b></a>
+        <b class="estilo">HOSPITAL NUESTRA FAMILIA</b>
       </div><!-- /.login-logo -->
       <div class="login-box-body">
-        <p class="login-box-msg">LOGIN</p>
-        <form action="../../index2.html" method="post">
+        
+        <p class="login-box-msg" style="font-size: 40px;" >LOGIN</p>
+        <div class="container-img">
+        <img src="../files/img/LOGO.png" height="90" width="150">
+        </div>
+        <br>
+        <form method="post" id="frmAcceso">
           <div class="form-group has-feedback">
-            <input type="email" class="form-control" placeholder="Email">
+            <input type="text" class="form-control" id="logina" name="logina" placeholder="Username">
             <span class="fa fa-user form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
-            <input type="password" class="form-control" placeholder="Password">
+            <input type="password" id="clavea" name="clavea" class="form-control" placeholder="Password">
             <span class="fa fa-key form-control-feedback"></span>
           </div>
           <div class="row">
@@ -60,5 +68,7 @@
     <script src="../public/js/jquery-3.1.1.min.js"></script>
     <!-- Bootstrap 3.3.5 -->
     <script src="../public/js/bootstrap.min.js"></script>
+    <!-- Bootbox -->
+    <script src="../public/js/bootbox.min.js"></script>
   </body>
 </html>
