--- a/vistas/login.html
+++ b/vistas/login.html
@@ -58,7 +58,9 @@
         </form>
 
         
-        <a href="#">Olvidé mi password</a><br>
+        <a href="#"> <u> Olvidé mi password</u></a><br>
+
+        <a href="registro.html">Crear Cuenta</a><br>
         
 
       </div><!-- /.login-box-body -->
@@ -70,5 +72,6 @@
     <script src="../public/js/bootstrap.min.js"></script>
     <!-- Bootbox -->
     <script src="../public/js/bootbox.min.js"></script>
+    <script type="text/javascript" src="scripts/login.js"></script>
   </body>
 </html>
